# missiontools

./: .gitignore  .readthedocs.yaml  CHANGELOG  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/source/: conf.py  conventions.rst  index.rst
examples/: canada_coverage.ipynb  canada_coverage_constellation.ipynb  conditional_coverage.ipynb  cubesat_power.ipynb  cubesat_thermal.ipynb  eu_coverage_set_ops.ipynb  interference_analysis.ipynb  sso_coverage_by_latitude.ipynb  sso_coverage_by_latitude.py  svalbard_access.ipynb  svalbard_access.py  xband_downlink.ipynb  yaw_steering.ipynb
missiontools/: __init__.py  aoi.py  coverage_analysis.py  ground_station.py  sensor.py  spacecraft.py
missiontools/attitude/: __init__.py  attitude_law.py
missiontools/comm/: __init__.py  antenna.py  interference.py
missiontools/condition/: __init__.py  condition.py
missiontools/coverage/: __init__.py  coverage.py
missiontools/orbit/: __init__.py  access.py  constants.py  frames.py  propagation.py  shadow.py
missiontools/plotting/: __init__.py  _map.py  coverage_map.py  ground_track.py
missiontools/power/: __init__.py  solar_config.py
missiontools/radiation/: __init__.py
missiontools/sensor/: __init__.py  sensor_law.py
tests/: test_access.py  test_antenna.py  test_aoi.py  test_attitude.py  test_comm.py  test_condition.py  test_coverage.py  test_coverage_analysis.py  test_frames.py  test_ground_station.py  test_orbit.py  test_plotting.py  test_power.py  test_radiation.py  test_sensor.py  test_shadow.py  test_solar_config.py  test_spacecraft.py  test_thermal.py
(+29 files in other folders)
